ci: Add new 7.101.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -107,3 +107,5 @@ entries:
     replaces: eclipse-che.v7.98.0
   - name: eclipse-che.v7.100.0
     replaces: eclipse-che.v7.99.0
+  - name: eclipse-che.v7.101.0
+    replaces: eclipse-che.v7.100.0
