--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -109,6 +109,10 @@ spec:
               value: 'false'
             - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_CONTAINERSECURITYCONTEXT
               value: '{"allowPrivilegeEscalation": true,"capabilities": {"add": ["SETGID", "SETUID"]}}'
+            - name: CHE_OPERATOR_WORKSPACES_CONFIG_CONTROLLER_LABELS_TO_REMOVE_BEFORE_SYNC_REGEXP
+              value: 'argocd[.]argoproj[.]io/.+'
+            - name: CHE_OPERATOR_WORKSPACES_CONFIG_CONTROLLER_ANNOTATIONS_TO_REMOVE_BEFORE_SYNC_REGEXP
+              value: ''
           livenessProbe:
             httpGet:
               path: /healthz
