--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -109,3 +109,5 @@ entries:
     replaces: eclipse-che.v7.99.0
   - name: eclipse-che.v7.101.0
     replaces: eclipse-che.v7.100.0
+  - name: eclipse-che.v7.102.0
+    replaces: eclipse-che.v7.101.0
