--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -108,7 +108,7 @@ metadata:
     operatorframework.io/arch.amd64: supported
     operatorframework.io/arch.arm64: supported
     operatorframework.io/os.linux: supported
-  name: eclipse-che.v7.103.0-906.next
+  name: eclipse-che.v7.105.0-911.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1009,10 +1009,14 @@ spec:
                           - ALL
                       privileged: false
                       readOnlyRootFilesystem: false
+                      runAsNonRoot: true
                 hostIPC: false
                 hostNetwork: false
                 hostPID: false
                 restartPolicy: Always
+                securityContext:
+                  seccompProfile:
+                    type: RuntimeDefault
                 serviceAccountName: che-operator
                 terminationGracePeriodSeconds: 20
       permissions:
@@ -1080,7 +1084,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.103.0-906.next
+  version: 7.105.0-911.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
