--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -7898,6 +7898,17 @@ spec:
                               claim size, the storage class that provisions it must
                               support resizing.
                             type: string
+                          storageAccessMode:
+                            description: |-
+                              StorageAccessMode are the desired access modes the volume should have.
+                              It is used to specify PersistentVolume access mode type to RWO/RWX when using per-user strategy, allowing
+                              user to re-use volume across multiple workspaces.
+
+
+                              It defaults to ReadWriteOnce if not specified
+                            items:
+                              type: string
+                            type: array
                           storageClass:
                             description: Storage class for the Persistent Volume Claim.
                               When omitted or left blank, a default storage class
@@ -7913,6 +7924,17 @@ spec:
                               claim size, the storage class that provisions it must
                               support resizing.
                             type: string
+                          storageAccessMode:
+                            description: |-
+                              StorageAccessMode are the desired access modes the volume should have.
+                              It is used to specify PersistentVolume access mode type to RWO/RWX when using per-user strategy, allowing
+                              user to re-use volume across multiple workspaces.
+
+
+                              It defaults to ReadWriteOnce if not specified
+                            items:
+                              type: string
+                            type: array
                           storageClass:
                             description: Storage class for the Persistent Volume Claim.
                               When omitted or left blank, a default storage class
