--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -113,3 +113,5 @@ entries:
     replaces: eclipse-che.v7.101.0
   - name: eclipse-che.v7.104.0
     replaces: eclipse-che.v7.102.0
+  - name: eclipse-che.v7.105.0
+    replaces: eclipse-che.v7.104.0
