ci: Add new 7.106.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -115,3 +115,5 @@ entries:
     replaces: eclipse-che.v7.102.0
   - name: eclipse-che.v7.105.0
     replaces: eclipse-che.v7.104.0
+  - name: eclipse-che.v7.106.0
+    replaces: eclipse-che.v7.105.0
